Moving CubeMAp and Texture into Actors directory Starting a more complex Event system

--- a/TODO
+++ b/TODO
@@ -1,8 +1,11 @@
 TODO:
-optimise GLSL (shadered memory) (advanced-glsl)
 
 TODO Later:
+optimise GLSL (shadered memory) : https://learnopengl.com/Advanced-OpenGL/Advanced-GLSL
 Batch rendering
 Particule system
 Skeletal Animation system
 Mouse picking
+
+TODO if needed:
+Transparancy : https://learnopengl.com/Advanced-OpenGL/Blending
